// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditionsMenuButton should display a default EditionsMenuButton with correct styling 1`] = `
<View
  accessibilityLabel="Regions and specials editions menu"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 24,
      "height": 42,
      "justifyContent": "center",
      "opacity": 1,
      "width": 42,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "space-around",
        "marginRight": 14,
        "width": 55,
      }
    }
  >
    <RNSVGSvgView
      bbHeight="42"
      bbWidth="42"
      fill="none"
      focusable={false}
      height={42}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 42,
            "width": 42,
          },
        ]
      }
      width={42}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGRect
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          height="41"
          propList={
            [
              "stroke",
            ]
          }
          rx="20.5"
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          width="41"
          x="0.5"
          y="0.5"
        />
        <RNSVGCircle
          cx="29"
          cy="14"
          fill={
            {
              "payload": 4294949576,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
          r="7"
        />
        <RNSVGCircle
          cx="14"
          cy="14"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
          r="7"
        />
        <RNSVGCircle
          cx="29"
          cy="29"
          fill={
            {
              "payload": 4287683839,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
          r="7"
        />
        <RNSVGCircle
          cx="14"
          cy="29"
          fill={
            {
              "payload": 4294934287,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
          r="7"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "white",
          "fontFamily": "GuardianTextSans-Regular",
          "fontSize": 12,
          "lineHeight": 14.75,
          "top": 8,
        }
      }
    >
      Editions
    </Text>
  </View>
</View>
`;

exports[`EditionsMenuButton should display a selected EditionsMenuButton with correct styling 1`] = `
<View
  accessibilityLabel="Regions and specials editions menu"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#90dcff",
      "borderRadius": 24,
      "height": 42,
      "justifyContent": "center",
      "opacity": 1,
      "width": 42,
    }
  }
>
  <Text
    style={
      {
        "alignSelf": "center",
        "color": "#333333",
        "fontFamily": "GuardianIcons-Regular",
        "fontSize": 20,
        "lineHeight": 20,
      }
    }
  >
    
  </Text>
</View>
`;
